<resources>
    <string name="app_name">imagenesCelebridades</string>
    <string name="albert">Saludos! Soy Albert Einstein</string>
    <string name="obama">OBAMA</string>
    <string name="rafa">RAFA</string>
    <string name="penelope">PENELOPE</string>
    <string name="will">WILL</string>
    <string name="obamaMensaje">Saludos! Soy Obama</string>
    <string name="einstein">Einstein</string>
    <string name="penelopeMensaje">Saludos! Soy Penélope</string>
    <string name="rafaMensaje">Saludos! Soy Rafa</string>
    <string name="willMensaje">Saludos! Soy Will</string>
</resources>